--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,6 @@ $norm: sans-serif, monospace;
 * {
   margin: 0;
   padding: 0;
-
   box-sizing: border-box;
 
   ul {
@@ -87,8 +86,14 @@ body {
           margin-bottom: -16px;
 
           .bind-icon {
-            @extend .lead;
-            
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 1rem;
+            height: 60px;
+            padding: 0 0.5rem;
+            border: 1px solid rgb(27, 25, 25);
+
             input[type="text"] {
               border: none;
 
@@ -105,8 +110,6 @@ body {
               display: block;
               width: 70%;
               height: 50px;
-              
-
             }
           }
         }
@@ -116,9 +119,9 @@ body {
           width: 100%;
 
           li {
-            @extend button;
             display: flex;
-            width: inherit;
+            width: 100%;
+            height: 60px;
             align-items: center;
             gap: 1rem;
             border: 1px solid rgb(27, 25, 25);
