--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -81,7 +81,7 @@ body {
 
         .app {
           width: 100%;
-          border: 1px solid rgb(27, 25, 25);
+          border: 1px solid #1b1919;
           background-color: #fff;
           margin-bottom: -16px;
 
