--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,166 +1,209 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Caveat+Brush&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-$cavaet: "Caveat Brush", monospace, "cursive", sans-serif;
-$norm: sans-serif, monospace;
+$body-background: bisque;
+$inline-padding: 20px 40px;
+$light-grey: #e7e6e6;
+$grey-background: #eee;
+$new-task-background: #f6f6f6;
+
+root {
+  --animate-delay: 0.5s;
+}
 
 * {
-  margin: 0;
   padding: 0;
-  box-sizing: border-box;
-
-  ul {
-    list-style-type: none;
-  }
-
-  i,
-  button {
-    cursor: pointer;
-  }
+  margin: 0;
+  box-sizing: content-box;
+  font-family: 'Poppins', sans-serif;
+  transition: 300ms;
 }
 
 body {
-  background-color: rgba(255, 228, 196, 0.1);
-  font-size: 1.25rem;
-  max-height: 100vh;
+  position: relative;
+  background-color: $body-background;
+}
 
-  .head {
+.clipboard {
+  padding: calc(10vh - 25px) 0 0 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  z-index: 1;
+}
+
+button {
+  cursor: pointer;
+}
+
+.to-do-Section {
+  padding: 10vh 10vw;
+}
+
+#to-do-container {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 1px solid #3a3a3c;
+  border-radius: 5px;
+  box-shadow: 0 4px 10px 5px rgba(0, 0, 0, 0.5);
+}
+
+@mixin icon() {
+  border: none;
+  background-color: transparent;
+  color: dimgrey;
+  width: 30px;
+}
+
+@mixin row-space-between() {
+  display: flex;
+  justify-content: space-between;
+}
+
+.icon {
+  width: 30px;
+  height: 30px;
+  opacity: 1;
+}
+
+.icon:hover {
+  opacity: 0.7;
+}
+
+.heading {
+  @include row-space-between;
+
+  background-color: $grey-background;
+  padding: $inline-padding;
+
+  h1 {
+    letter-spacing: 1px;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+
+  button {
+    @include icon;
+  }
+}
+
+hr {
+  border: 1px solid $light-grey;
+}
+
+input {
+  border: none;
+}
+
+input:enabled {
+  border: none;
+  outline: none;
+}
+
+#add-new-task {
+  @include row-space-between;
+
+  background-color: $new-task-background;
+  padding: 0 40px;
+
+  input {
+    padding: 25px 0;
+    background-color: $new-task-background;
+    width: 90%;
+  }
+
+  input::placeholder {
+    font-style: italic;
+  }
+
+  button {
+    @include icon;
+  }
+}
+
+#tasks-list {
+  list-style: none;
+
+  .task {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding: 0 40px;
     align-items: center;
-    padding: 2rem;
+    gap: 15px;
 
-    .logo {
-      font-weight: 500;
-      font-family: $cavaet;
-      font-size: 2rem;
+    .description {
+      width: 100%;
+      display: flex;
+      align-items: baseline;
 
-      span {
-        color: cadetblue;
+      input {
+        padding: 25px 0;
+        text-overflow: ellipsis;
+        width: 95%;
+      }
+
+      .checked {
+        color: grey;
+        font-style: italic;
+        text-decoration: line-through;
       }
     }
 
-    .logo-text {
-      font-family: $cavaet;
+    input:disabled {
+      color: black;
     }
-  }
 
-  .dock {
-    width: 100%;
+    .task-detail {
+      display: flex;
+      flex-grow: 1;
+      gap: 15px;
+      align-items: center;
+    }
 
-    .container {
-      width: 80%;
-      margin: 0 auto;
-      min-height: 600px;
-
-      .grp-tab {
-        width: 480px;
-        box-shadow: 0 1px 5px 0 #000;
-        margin: 0 auto;
-        border-radius: 3px;
-      }
-
-      .lead {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        font-size: 1rem;
-        height: 60px;
-        padding: 0 0.5rem;
-        border: 1px solid rgb(27, 25, 25);
-
-        h1 {
-          font-weight: 400;
-          font-size: 1.25rem;
-          font-family: $norm;
-        }
-      }
-
-      .main-cta {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-        margin: 0 auto;
-        width: 100%;
-
-        .app {
-          width: 100%;
-          border: 1px solid rgb(27, 25, 25);
-          background-color: #fff;
-          margin-bottom: -16px;
-
-          .bind-icon {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            font-size: 1rem;
-            height: 60px;
-            padding: 0 0.5rem;
-            border: 1px solid rgb(27, 25, 25);
-
-            input[type="text"] {
-              border: none;
-
-              &:focus {
-                outline: none;
-              }
-
-              &::placeholder {
-                font-style: italic;
-              }
-            }
-
-            .task {
-              display: block;
-              width: 70%;
-              height: 50px;
-            }
-          }
-        }
-
-        .task-list {
-          display: block;
-          width: 100%;
-
-          li {
-            display: flex;
-            width: 100%;
-            height: 60px;
-            align-items: center;
-            gap: 1rem;
-            border: 1px solid rgb(27, 25, 25);
-            padding: 0 0.5rem;
-
-            .flex-grp {
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
-              width: 100%;
-
-              .new {
-                height: 50px;
-                padding: 0.5rem;
-                width: 100%;
-                margin-right: 0.5rem;
-                border: none;
-                outline: none;
-                background-color: rgba(255, 228, 196, 0.1);
-              }
-            }
-
-            .trash {
-              display: none;
-            }
-          }
-        }
-
-        .clear {
-          margin-top: -16px;
-          width: 100%;
-          height: 60px;
-        }
-      }
+    button {
+      @include icon;
     }
   }
+}
+
+#clear-completed-button {
+  padding: $inline-padding;
+  border: none;
+  background-color: $grey-background;
+}
+
+#popup {
+  display: none;
+  position: fixed;
+  padding: 15px;
+  z-index: 1;
+  bottom: 10px;
+  right: 10px;
+  background-color: #cc0f0f;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
+
+  p {
+    text-align: center;
+    color: white;
+  }
+}
+
+input[type=checkbox] {
+  width: 20px;
+  height: 20px;
+}
+
+#dropped {
+  inset: 0;
+  position: fixed;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  font-size: 2rem;
+  color: white;
+  font-weight: bold;
 }
