--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,6 +50,7 @@ button {
   box-shadow: 0 4px 10px 5px rgba(0, 0, 0, 0.5);
 }
 
+/* stylelint-disable */
 @mixin icon() {
   border: none;
   background-color: transparent;
